# auto-archiver-api

./: .coveragerc  .dockerignore  .env.alembic  .env.example  .env.test  .example.env  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Makefile  Pipfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  user-groups.example.yaml  web.Dockerfile  worker.Dockerfile
.github/workflows/: ci.yml  format-and-fail.yml  test.yml
app/: .example.env  alembic.ini  example.user-groups.yaml  test.ipynb
app/db/: crud.py  database.py  schemas.py
app/migrations/: alembic.ini  env.py
app/shared/: aa_utils.py  business_logic.py  config.py  constants.py  log.py  schemas.py  settings.py  task_messaging.py  user_groups.py
app/tests/: conftest.py  fake_service_account.json  orchestration.test.yaml  user-groups.test.broken.yaml  user-groups.test.yaml
app/web/: __init__.py  config.py  events.py  main.py  middleware.py  security.py
app/worker/: main.py  worker_log.py
docker/web/: Dockerfile
docker/worker/: Dockerfile
redis/config/: redis.conf
src/: .dockerignore  .env.alembic  .env.test  .example.env  Dockerfile  Pipfile  example.user-groups.yaml  main.py  requirements.txt  security.py  user-groups.test.yaml  worker.py
src/auth/: README.md  db.py  schemas.py  users.py
src/core/: config.py  events.py  logging.py
src/db/: __init__.py  crud.py  database.py  models.py  schemas.py  user_state.py
src/endpoints/: __init__.py  default.py  interoperability.py  sheet.py  task.py  url.py
src/migrations/: env.py
src/shared/: settings.py  task_messaging.py  user_groups.py
src/tests/: conftest.py  orchestration-sheet.test.yaml  test_main.py  test_start.py  user-groups.test.broken.yaml  user-groups.test.yaml
(+86 files in other folders)
